# ApiGenerator

./: .gitignore  pom.xml  vst.xml.source
api-atom-cpp/: .gitignore  CMakeLists.txt  MinGwBuild.make  MinGwTest.make  MsvcBuild.make  MsvcTest.make  WineBuild.make  WineTest.make  api-atom-make
api-atom-cpp/include/: apiException.h  apiGenerate.h  apiHost.h  apiLocal.h  apiObject.h  apiPacket.h  apiRemote.h  apiTransaction.h  apiVariant  bufferStream.h  connection.h  defaultProtocol.h  defaultRegistry.h  endian.h  exceptional  fileStream.h  monitorQueue  packet.h  packetCall.h  packetException.h  packetReturn.h  pipeStream.h  platform.h  protocol.h  readerThread  safeCounter.h  semaphore.h  stream.h  streamConnection.h  stringio.h  thread.h  variant  winPlatform.h  winSemaphore.h  winThread.h  winapi.h  writerThread
api-atom-cpp/src/: apiException.cpp  apiHost.cpp  apiObject.cpp  apiRemote.cpp  apiTransaction.cpp  bufferInputStream.cpp  bufferOutputStream.cpp  defaultProtocol.cpp  defaultRegistry.cpp  endian.cpp  fileStream.cpp  inputStream.cpp  outputStream.cpp  packet.cpp  packetCall.cpp  packetException.cpp  packetReturn.cpp  pipeStream.cpp  safeCounter.cpp  streamConnection.cpp  stringio.cpp  winPlatform.cpp  winSemaphore.cpp  winThread.cpp
api-atom-cpp/test/: apiHostTest.cpp  bufferTest.cpp  endianTest.cpp  exceptionalTest.cpp  fileTest.cpp  mechTest.cpp  packetTest.cpp  pipeTest.cpp  protocolTest.cpp  semaphoreTest.cpp  singleConnTest.cpp  testCase.h  testMain.cpp  threadTest.cpp  transactionTest.cpp  variantTest.cpp  winSemaphoreTest.cpp  winTestPlatform.cpp  (+1 more)
(+88 files in other folders)
